[package]
name = "tea-house-election"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenv = "0.15.0"
either = "1.13.0"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
test-case = "3.3.1"
